# robotDevastation-openrave-models

./: CMakeLists.txt  README.md
cmake/template/: RD_OPENRAVE_MODELSConfig.cmake.in
openrave/: CMakeLists.txt  ecro.robot.xml  mapping_room.env.xml
openrave/ecro/: ecro.robot.xml  mapping_room.env.xml  qr1.robot.xml
openrave/ecro/models/: qr1.wrl
